sumo/tests/sumo/output/tripinfo/errors/pos_false__entry/errors.sumo
Error: Position of an entry of detector '4/1to3/1' is not numeric.
Quitting (on error).
